assets/styles/common/purpose.scss
.content-purpose {
  margin-bottom: 1rem;

  & > .content-purpose-label {
    text-transform: uppercase;
    background: var(--color-delivery-purpose-label-bg);
    padding: 4px 0;
    color: var(--color-white);
    margin-bottom: 1rem;
  }

  & > .content-purpose-content {
    padding: 0 2em;
  }

  &.none {
    & > .content-purpose-label {
      display: none;
    }

    .content-purpose-content {
      padding: 0px;
    }
  }

  &.checkpoint {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f11e';
      }
    }
  }

  &.didigetthis {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f256';
      }
    }
  }

  &.example {
    border-bottom: 1px dashed rgba(#74b9ff, 0.75);

    & > .content-purpose-label {
      border-bottom: 1px dashed rgba(#74b9ff, 0.75);
      font-weight: 700;
      background: transparent;
      color: var(--body-color);

      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f1e5';
      }
    }
  }

  &.labactivity {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f610';
      }
    }
  }

  &.learnbydoing {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f51c';
      }
    }
  }

  &.learnmore {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f51b';
      }
    }
  }

  &.manystudentswonder {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f5da';
      }
    }
  }

  &.quiz {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f46c';
      }
    }
  }

  &.myresponse {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f681';
      }
    }
  }

  &.simulation {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f109';
      }
    }
  }

  &.walkthrough {
    & > .content-purpose-label {
      /** icon */
      &::before {
        font-family: 'Font Awesome 6 Free';
        font-weight: 900;
        margin-left: 8px;
        margin-right: 8px;
        content: '\f6ec';
      }
    }
  }
}

.content-page-link {
  $color: #3d81f6;
  $bg: rgba(#64748b, 0.2);

  border: 1px solid #64748b;

  .content-purpose-label {
    margin-bottom: 0;
  }

  .content-purpose-content {
    background-color: rgba($bg, 0.2);
    padding: 1em;
  }

  &.content-purpose.none {
    .content-purpose-content {
      padding: 1em;
    }
  }

  a.internal-link,
  a.internal-link:link,
  a.internal-link:visited {
    text-decoration: none;

    .content-purpose-content {
      .title {
        font-size: 1.3em;
        color: var(--color-body-color);
      }

      i {
        color: darken($color, 15%);
      }
    }
  }

  a.internal-link:hover,
  a.internal-link:active {
    .content-purpose-content {
      background-color: rgba($bg, 0.3);

      i {
        color: darken($color, 25%);
      }
    }
  }
}

// NOTICE: activity-purpose class is deprecated but is left here to support existing content
.activity-purpose {
  padding: 4px 8px;
  font-weight: 200;
  text-transform: uppercase;
  color: white;
  border-radius: 4px;

  // Only display purpose type decorations for the first elem of that type
  // in a series.
  // HTML looks like:
  // <h4 class="{purpose-type}" />
  // <activity class="activity-container" />
  // <h4 class="{purpose-type}" />
  // <activity class="activity-container" />
  // So, we use the sibling selector to hide duplicate purpose types
  // that occur after an activity element.
  &.checkpoint + .activity-container + .checkpoint,
  &.didigetthis + .activity-container + .didigetthis,
  &.learnbydoing + .activity-container + .learnbydoing {
    display: none;
  }

  &.checkpoint {
    background-color: rgba(#0984e3, 0.75);

    &::before {
      font-family: 'Font Awesome 6 Free';
      font-weight: 900;
      margin-right: 8px;
      content: '\f46c';
    }
  }

  &.didigetthis {
    background-color: rgba(#8e44ad, 0.75);

    &::before {
      font-family: 'Font Awesome 6 Free';
      font-weight: 900;
      margin-right: 8px;
      content: '\f256';
    }
  }

  &.learnbydoing {
    background-color: rgba(#00b894, 0.75);

    &::before {
      font-family: 'Font Awesome 6 Free';
      font-weight: 900;
      margin-right: 8px;
      content: '\f51c';
    }
  }
}

html.dark {
  .content-purpose {
    & > .content-purpose-label {
      background: var(--color-delivery-purpose-label-bg-dark);
    }

    &.example {
      & > .content-purpose-label {
        background: transparent;
      }
    }
  }
}

